# AIchem1st

./: .env.example  .gitignore  Chen_jianxi.csv  CoolAgent_development_set.csv  InfoAgent.csv  L3Agent_gpt-4o-mini.csv  PHASE2.md  README.md  correctlly_led_open_ended_questions_100_1.parquet  correctlly_led_open_ended_questions_100_2.parquet  correctlly_led_open_ended_questions_100_3.parquet  design.md  dev_60_answers_4o.csv  development_set.json  eval.py  implememntation.md  input.md  jianxi_mini.csv  main.py  manual_test_tool.py  mcq_labeller_gui.py  mcq_part_5.json  part1.parquet  part2.parquet  part3.parquet  plan.md  plan.py  pyproject.toml  questions  requirements.txt  result.csv  run.py  run_tests.py  script_temporal_query.py  temp.py  temp.txt  temp2.py  temp2.txt  test-00000-of-00001.parquet  test_max_steps.py  (+5 more)
app/: README.md  __init__.py  constants.py  graph.py  llm.py  main.py  schema.py  state.py  tools.py
capability_groups/: Character Emotion Attribute.txt  Character Emotion Attribute_all.txt  Character Motivation Causality.txt  Character Motivation Causality_all.txt  Character Reaction Causality.txt  Character Reaction Causality_all.txt  Displacement Attribute.txt  Displacement Attribute_all.txt  Element Attributes (Optical Illusion).txt  Element Attributes (Optical Illusion)_all.txt  Element Attributes.txt  Element Attributes_all.txt  Element Counting.txt  Element Counting_all.txt  Element Localization.txt  Element Localization_all.txt  Event Counting.txt  Event Counting_all.txt  Event Duration & Speed Attribute.txt  Event Localization.txt  (+18 more)
src/: main.py  (+1 more)
(+309 files in other folders)
