[project]
name = "aichem1st"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.76.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
l3agent = [
    "pytubefix>=8.12.3",
    "youtube-transcript-api>=1.0.3",
]

[tool.uv]
default-groups = ["l3agent"]
